# mobile_trade

./: .gitignore  LICENSE  Makefile  README.md  backend_deploy.sh  deploy.sh  frontend_deploy.sh  plans412d8e8b-1441-484a-96e3-cb349441f1b4.xlsx  planseaeb8506-4e70-4c2a-b857-8541453256b4.xlsx  publish.sh  sonar-project.properties  test.sh
.devcontainer/: Dockerfile  devcontainer.json  nginx_upload_install.sh
.github/workflows/: main.yml  release.yml
api/: .eslintrc.js  Makefile  api_param_result_define.js  api_utils.js  bidding_api.js  bidding_lib.js  cash_api.js  cash_lib.js  db_opt.js  field_lib.js  index.js  legacy_api.js  openapi_utils.js  package-lock.json  package.json  plan_api.js  plan_lib.js  rbac_api.js  rbac_lib.js  result.js  sc_api.js  sc_lib.js  swagger_auth.js  test_req.js  webpack.config.js  wx_api_util.js
api/lib/: approval_lib.js  audit_lib.js  bidding_lib.js  cash_lib.js  clean_driver.js  exam_lib.js  fc_lib.js  field_lib.js  group_lib.js  hook_lib.js  king_dee_start_lib.js  lag_rpc.js  plan_lib.js  protocol_lib.js  py_search_lib.js  rbac_lib.js  sc_lib.js  t_plus_lib.js  util_lib.js  wx_api_util.js
api/module/: approval_module.js  audit_module.js  bidding_module.js  buy_management_module.js  cash_module.js  common.js  common_header.js  customer_module.js  exam_module.js  global_module.js  group_module.js  rbac_module.js  safe_check_module.js  sale_management_module.js  scale_module.js  stuff_module.js  supplier_module.js  tplus_module.js  u8c_module.js
api/plugin/: all_plugin.js  hnmhg.js  new_zczh.js  normal.js  old_zczh.js  yt_audit.js  zczh_api_utils.js
automation/: Makefile  api_base.resource  custom_library.py  database.resource  require.txt  var.resource
automation/approval/: approval_flow.robot  approval_group.resource  approval_opt.resource  group_member_order_permission.robot
automation/audit/: audit_config.robot  audit_opt.resource
automation/bidding/: bidding_config.robot  bidding_exception.robot  bidding_opt.resource
automation/black_list/: black_list.resource  black_list.robot
automation/exam/: exam.resource  exam.robot
automation/group/: group.resource  group_contract_member_flow.robot  group_contract_price_strategy.robot  group_manage.robot  group_order.resource  group_order_operations.robot
automation/rbac/: company_admin.robot  rbac_curd.resource  super_user_curd.robot
automation/safe_check/: sc_config.robot  sc_opt.resource  sc_plan_link.robot
automation/stuff/: plan_balance_verify.robot  plan_exception.robot  plan_standard.robot  stuff_curd.robot  stuff_new_price.robot  stuff_opt.resource  subsidy.robot
automation/wx_msg/: wx_msg.robot
conf/: Makefile  nginx.conf  模板.xlsx
doc_site/: Makefile  hugo.toml
lag_rpc/: Makefile  idl.thrift
mock/: index.js  package-lock.json  package.json
mt_gui/: App.vue  Makefile  main.js  manifest.json  package-lock.json  package.json  pages.json  vue.config.js
mt_gui/components/: BidDetail.vue  DataFilter.vue  DevOpt.vue  ListShow.vue  ModuleFilter.vue  NoticeBar.vue  Qa.vue  ScUpload.vue
mt_gui/pages/: Admin.vue  AppPanel.vue  BiddingConfig.vue  BiddingJoin.vue  Bind.vue  BuyContract.vue  DevPage.vue  (+13 more)
mt_pc/: .eslintrc.js  Makefile  package.json  vue.config.js
script/: Makefile  data_move.py  db_mgrt.sh  fill_company_py_search.js  reset-db.sh  select-purpose.sh  set_cors.sh  stop_server.sh  timer.sh
zczh/: Makefile  deploy.sh
zczh/base/file_up_down/: CMakeLists.txt  file_up_down.cpp  file_up_down.h
zczh/base/idl/: CMakeLists.txt  Makefile  idl.thrift
zczh/base/serial_link/: CMakeLists.txt  zh_vcom_link.cpp  zh_vcom_link.h
zczh/base/utils/: CMakeLists.txt  tdf_timer.cpp  tdf_timer.h  utils.cpp  utils.h
zczh/base/zyzl_plugin/: CMakeLists.txt  zh_zyzl.cpp  zh_zyzl.h
zczh/service/: CMakeLists.txt  Makefile
zczh/service/cli/: common_cli.h  device_cli.cpp  device_cli.h  main.cpp  rbac_cli.cpp  rbac_cli.h  rule_cli.cpp  rule_cli.h  system_cli.cpp  system_cli.h  tabulate.hpp
zczh/service/core/: main.cpp
zczh/service/device/: driver.h  main.cpp
zczh/service/device/drivers/: VzClientSDK_CommonDefine.h  VzClientSDK_FaceDefine.h  VzClientSDK_LPDefine.h  VzLPRClientSDK.h  VzLPRClientSDKDefine.h  VzLPRClientSDK_WhiteList.h  VzLPRClientSDK_WhiteListDefine.h  VzLPRFaceClientSDK.h  card_deliver.cpp  card_reader.cpp  common_scale_driver.h  id_reader.cpp  mock_driver.cpp  tld_style_scale.cpp  wl_style_scale.cpp  wr_style_scale.cpp  zs_plate_cam.cpp
zczh/service/lib/: config_management_imp.cpp  config_management_imp.h  device_management_imp.cpp  device_management_imp.h  order_center_imp.cpp  order_center_imp.h  rbac_center_imp.cpp  rbac_center_imp.h  rpc_include.h
(+536 files in other folders)
